--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
     "prettier": "prettier . --write",
     "preview": "vite preview",
     "publish": "npm run build && npm run deploy",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest --watch",
+    "test:related": "vitest related",
     "updb": "npx tsc --esModuleInterop true ./scripts/parseSqlDump.cts && node ./scripts/parseSqlDump.cjs && rm ./scripts/parseSqlDump.cjs",
     "loadEnv": "export $(grep -v '^#' .env | xargs)",
     "unloadEnv": "unset $(grep -v '^#' .env | sed -E 's/(.*)=.*/\\1/' | xargs)"
@@ -34,6 +40,9 @@
     "sql.js": "^1.9.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/better-sqlite3": "^7.6.9",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
@@ -42,6 +51,8 @@
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
     "basic-ftp": "^5.0.5",
     "better-sqlite3": "^9.4.3",
     "dotenv": "^16.4.5",
@@ -49,13 +60,16 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "happy-dom": "^18.0.1",
     "husky": "^9.0.11",
+    "jsdom": "^26.1.0",
     "lint-staged": "^15.2.2",
     "prettier": "3.2.5",
     "typescript": "^5.4.5",
     "vite": "^5.1.6",
     "vite-plugin-node-polyfills": "^0.23.0",
-    "vite-tsconfig-paths": "^4.3.1"
+    "vite-tsconfig-paths": "^4.3.1",
+    "vitest": "^3.2.4"
   },
   "lint-staged": {
     "*.{ts,tsx}": "eslint --cache --fix",
